--- a/styles/style.css
+++ b/styles/style.css
@@ -35,7 +35,16 @@ html {
   font-weight: 700;
   border-radius: 8px;
 }
-
+.section_title {
+  color: var(--title_color);
+  font-size: 4rem;
+  font-weight: 800;
+}
+.section_para {
+  color: var(--para_color);
+  margin: 24px 0 50px;
+  font-size: 1.6rem;
+}
 /* header */
 nav {
   padding: 50px 0;
@@ -151,6 +160,11 @@ nav ul li a {
 .destination {
   margin-top: 100px;
 }
+.destination_txt,
+.choose_us_content {
+  text-align: center;
+}
+
 .destination_img_holder {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
@@ -191,4 +205,47 @@ nav ul li a {
 }
 .img7 {
   grid-column: span 7;
+}
+/* why choose us */
+.choose_us {
+  margin-top: 100px;
+}
+.boxes_holder {
+  display: flex;
+  justify-content: space-between;
+  gap: 24px;
+}
+.boxs {
+  padding: 32px;
+  border-radius: 16px;
+}
+.boxs1,
+.boxs2 {
+  width: 49%;
+}
+.boxs1 {
+  border: 1px solid rgba(251, 181, 99, 0.2);
+  background: rgba(251, 181, 99, 0.05);
+}
+.boxs2 {
+  border: 1px solid rgba(41, 206, 246, 0.2);
+  background: rgba(41, 206, 246, 0.05);
+}
+.another_box_holder {
+  width: 50%;
+  margin: 24px auto 0;
+}
+.boxs3 {
+  border: 1px solid rgba(233, 68, 68, 0.2);
+  background: rgba(233, 68, 68, 0.05);
+}
+.boxs h3 {
+  font-size: 2.4rem;
+  color: var(--title_color);
+  font-weight: 800;
+  margin: 32px 0 16px;
+}
+.boxs p {
+  color: #5a5a5d;
+  font-size: 1.6rem;
 }
