--- a/styles/style.css
+++ b/styles/style.css
@@ -60,11 +60,13 @@ nav {
   justify-content: space-between;
   align-items: center;
 }
-.brand {
+.brand,
+.footer_brand {
   display: inline-flex;
   gap: 16px;
 }
-.brand p {
+.brand p,
+.footer_brand {
   color: var(--title_color);
   font-size: 3.6rem;
   font-weight: 800;
@@ -403,4 +405,31 @@ hr {
   bottom: 13%;
   transform: rotate(-20deg);
   border-radius: 16px;
+}
+/* footer */
+.footer {
+  background: rgba(19, 19, 24, 0.05);
+  margin-top: 100px;
+  padding: 110px 0;
+  text-align: center;
+}
+.footer_para {
+  color: var(--para_color);
+  margin: 15px 0 32px;
+  font-size: 1.6rem;
+}
+.social a {
+  color: #131318;
+  padding: 10px;
+}
+.social a i {
+  font-size: 28px;
+  margin-right: 5px;
+}
+.footer_devider {
+  margin: 50px 0;
+}
+.copy {
+  color: var(--title_color);
+  font-size: 1.6rem;
 }
